Bug 1281907 - Part 1 - Include zoom level compensation in clip transform passed to caller. r=botond

If we don't do that, in the case of a root scrollbar the clip transform passed
to our caller will incorrectly be scaled with the current content resolution.
This means that that the position of the clip rect won't match the actual
position of the scrollbar if the resolution isn't ~1.0, so the scrollbars will
be clipped out of existence when the content is (pinch-) zoomed in or out.

MozReview-Commit-ID: 5yXa9EpTJ2g